--- a/streetcredui/package.json
+++ b/streetcredui/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@emotion/is-prop-valid": "latest",
     "@hookform/resolvers": "^3.9.1",
+    "@metamask/sdk": "^0.32.1",
+    "@next/font": "^14.2.15",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-alert-dialog": "^1.1.4",
     "@radix-ui/react-aspect-ratio": "^1.1.1",
@@ -40,6 +42,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@react-three/drei": "latest",
     "@react-three/fiber": "latest",
+    "@tanstack/react-query": "^5.67.2",
     "@types/react-dom": "latest",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
@@ -56,6 +59,7 @@
     "lucide-react": "^0.454.0",
     "next": "15.1.0",
     "next-themes": "^0.4.4",
+    "pino-pretty": "^13.0.0",
     "plaid": "^26.0.0",
     "plaid-threads": "^11.2.3",
     "react": "^19",
@@ -72,6 +76,8 @@
     "tailwindcss-animate": "^1.0.7",
     "three": "latest",
     "vaul": "^0.9.6",
+    "viem": "^2.23.8",
+    "wagmi": "^2.14.12",
     "zod": "^3.24.1"
   },
   "devDependencies": {
