--- a/.env-example
+++ b/.env-example
@@ -14,3 +14,7 @@ PLAID_CLIENT_ID=
 PLAID_SECRET=
 PLAID_ENV=
 PLAID_PRODUCTS=
+
+
+# Make sure to have a cert.pem and key.pem
+# and add cert.pem as a trusted certificate for your browser
