--- a/streetcredui/package.json
+++ b/streetcredui/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "HTTPS=true SSL_CRT_FILE=../cert.pem SSL_KEY_FILE=../key.pem next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
